# transaction-processor

./: .eslintrc.cjs  .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.claude/: setup.sh
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml  main.yml  pr.yml  release.yml
.husky/: pre-commit
docs/: tech-spec.md  use-case.md
plans/: 0000-initial-plan.md
src/: App.tsx  app.css  bindings.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20260309000001_initial.sql  20260321000001_settings.sql
src-tauri/src/: error.rs  main.rs
src-tauri/src/commands/: backup.rs  filters.rs  mod.rs  reports.rs  settings.rs  transactions.rs
src-tauri/src/csv/: mod.rs
src-tauri/src/db/: backup.rs  filters.rs  mod.rs  settings.rs  transactions.rs
src/components/: FilterForm.tsx  Nav.tsx  TransactionTable.test.tsx  TransactionTable.tsx
src/screens/: FiltersScreen.test.tsx  FiltersScreen.tsx  ReportScreen.test.tsx  ReportScreen.tsx  SettingsScreen.tsx  TransactionsScreen.tsx
src/store/: AppStore.tsx
